--- a/SQLiteForMovement/SQLiteForMovement/SQLiteForMovement.csproj
+++ b/SQLiteForMovement/SQLiteForMovement/SQLiteForMovement.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.28" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
