--- a/ArchiveApp/ArchiveApp/ArchiveApp.csproj
+++ b/ArchiveApp/ArchiveApp/ArchiveApp.csproj
@@ -44,6 +44,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base64.cs" />
+    <Compile Include="Base64Decrypter.cs" />
+    <Compile Include="Base64Encrypter.cs" />
+    <Compile Include="Crypter.cs" />
+    <Compile Include="Hash.cs" />
+    <Compile Include="Hex.cs" />
+    <Compile Include="Packer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
